--- a/Aula 5/style.css
+++ b/Aula 5/style.css
@@ -30,11 +30,89 @@ section {
 img {
     width: 80%;
 }
-.container-direita {
+.conteiner-direita {
     background-color: #fff;
     width: 50%;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex-direction:column;
+    padding: 30px;
+}
+
+.flex {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    
+}
+button {
+    background-color: rgb(91, 82, 212);
+    color: white;
+    border-radius: 3px;
+    padding: 5px;
+    border: none;
+}
+.inputs {
+    display: flex;
+    flex-direction: column;
+}
+.inputs label {
+    font-weight: bold;
+    font-size: 12px;
+    padding: 5px 0;
+}
+
+.inputs input {
+    border-radius: 5px;
+    border: none;
+    box-shadow: 1px 1px 6px gray;
+    height: 30px;
+    width: 200px;
+}
+
+.inputs input::placeholder {
+    padding-left: 10px ;
+
+}
+
+.inputs input:hover {
+    border: none;
+    box-shadow: 3px 3px 6px  rgb(91, 82, 212);
+}
+.inputs input:focus {
+    outline: 1.5px solid  rgb(91, 82, 212);
+}
+.conteiner-genero {
+    width: 100%;
+}
+.conteiner-genero h2 {
+    font-weight: bold;
+    font-size: 12px;
+}
+
+.conteiner-genero div div label {
+    font-weight: bold;
+    font-size: 12px;
+}
+.continuar {
+    width: 100%;
+}
+section {
+    box-shadow:5px 5px 10px black;
+}
+h1 {
+    position: relative;
+}
+h1::after {
+    content: "";
+    background-color: #6c63ff;
+    height: 5px;
+    width: 50px;
+    margin: 0;
+    position: absolute;
+    border-radius: 10px;
+    border: none;
+    left: 0;
+    top: 30px;
 }
