--- a/Aula 10/Aula 10 - Horas/style.css
+++ b/Aula 10/Aula 10 - Horas/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap');
 
 * {
     padding: 0;
@@ -7,7 +7,7 @@
 }
 
 body {
-    font-family: 'Righteous', cursive;
+    font-family: "Poetsen One", sans-serif;
     background-color: rgb(2, 250, 229);
     width: 100vw;
     height: 100vh;
