--- a/Aula 13/style.css
+++ b/Aula 13/style.css
@@ -18,6 +18,10 @@ body {
 
 h1 {
     font-size: 40px;
+    color: green;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 main {
     background-color: white;
@@ -41,17 +45,22 @@ button {
     color: white;
 }
 
+
 .submit {
-    background-color:rgb(129, 233, 120) ;
+    background-color:rgb(86, 206, 75);
 }
 .reset {
-    background-color:rgb(86, 206, 75) ;
+    background-color: rgb(86, 206, 75) ;
 }
 .submit:hover {
     background-color:rgb(26, 139, 16) ;
+    transition: background-color 0.5s ease;
+    color: white;
 }
 .reset:hover {
     background-color:rgb(26, 139, 16) ;
+    transition: background-color 0.5s ease;
+    color: white;
 }
 
 input {
@@ -73,15 +82,22 @@ input::-webkit-outer-spin-button {
 }
 
 .label {
-    /* font-weight: bolder; */
-    font-size: 20px;
-
+    font-weight: bolder;
 }
 
 .conteiner-result {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr;
     flex-direction: column;
     gap: 5px;
+    align-items: center;
+    justify-content: center;
+}
+
+.conteiner-result div {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -98,4 +114,13 @@ a {
     border-radius: 10px;
     width: 100%;
     text-align: center;
+    color: rgb(26, 139, 16);
+    text-decoration: none;
+    transition: background-color 0.5s ease-out ;
+}
+
+a:hover {
+    background-color: rgb(26, 139, 16) ;
+    color: white;
+    transition: background-color 0.5s ease;
 }
