--- a/Aula 16/Exercício/style.css
+++ b/Aula 16/Exercício/style.css
@@ -16,40 +16,43 @@ body {
 }
 
 .titulo {
-    font-size: 15px;
-    display: flex;
-    text-align: left;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .conteiner {
     background-color: white;
+    display: flex;
+    cursor: pointer;
+    align-items: center;
     border-radius: 10px;
-    padding: 3.8em;
     box-shadow: 5px 5px 15px gray;
-
-    
+    margin-top: 15px;
+    margin-bottom: 15px;
+    justify-content: center;
+    flex-direction: column;
+    padding: 30px;
+    gap: 10px;
+}
+.conteiner:hover {
+    border: solid black 1px;
 }
 
-img {
-    height: 80px;
+.conteiner-mover{
+    border: solid 10px black; 
 }
-.conteiner-imagem {
+.conteiner-img {
     border: solid 1px rgba(128, 128, 128, 0.616);
     border-radius: 10px;
     padding: 2.5em;
     display: flex;
     align-items: center;
     flex-direction: column;
+    gap: 5px;
 }
 
-.aviso {
-    font-size: 15px;
-    font-weight: bold;
-    text-align-last: center;
-}
-
-p {
-    font-size: 10px;
+.conteiner-img:hover{
+    border: 2px solid green;
 }
 
 button {
@@ -57,9 +60,26 @@ button {
     border: none;
     padding: 5px;
     border-radius: 5px;
-    width: 280px;
+    width: 100%;
     font-weight: bold;
     color: white;
     box-shadow: 3px 3px 13px gray;
     cursor: pointer ;
 }
+
+button:hover {
+    border: solid black 2px;
+}
+
+.titulo-drag {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.aviso {
+    font-size: 10px;
+    font-weight: bold;
+}
+
+
+
