--- a/Trabalho Final/style.css
+++ b/Trabalho Final/style.css
@@ -1,24 +1,32 @@
 @import url('https://fonts.googleapis.com/css2?family=Poetsen+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Madimi+One&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: "Poetsen One", sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 body {
     background-color: #cc93df;
     width: 100vw;
     height: 100vh;
+    display: flex;
+    align-items: center;
 }
 
 .conteiner-imagem {
     background-color: #814d9476;
     display: flex;
+    flex-direction: column;
     padding: 40px;
     border-radius: 20px;
-    gap: 10px;
+    gap: 100px;
+    height: 80%;
+    margin: 5%;
     box-shadow: #2c033b 5px 5px 10px ;
 }
 
@@ -29,23 +37,71 @@ body {
     border-radius: 20px;
 }
 
-.github {
-    border-radius: 30px;
-    width: 90px;
+.conteiner-botoes {
+    display: flex;
+    justify-content: space-between;
 }
 
-.instagram {
-    border-radius: 30px;
-    width: 90px;
-} 
+.conteiner-botoes button {
+    border: none;
+    border-radius: 25px;
+    width: 50px;
+    height: 50px;
+    background-color: transparent;
+    cursor: pointer;
 
-.linkedin {
-    border-radius: 30px;
-    width: 90px;
+}
+ .conteiner-botoes button:hover {
+    box-shadow: #2c033b 5px 5px 10px;
+ }
+
+img {
+    width: 50px;
+    height: 49px;
+    border-radius: 25px;
 }
 
-.email {
-    border-radius: 30px;
-    width: 90px;
+
+.conteiner-previa {
+    padding: 0% 5% 5%;
+    display: flex;
+    gap: 30px;
+    flex-direction: column;
+    cursor: none;
 }
 
+
+h1 {
+    color: #ffd95c;
+    font-family: "Madimi One", sans-serif;
+    display: flex;
+    justify-content: center;
+    font-size: 50px;
+    margin-right: 2%;
+}
+
+h4 {
+    color: #2c033b;
+
+}
+
+h2 {
+    color: #2c033b;
+}
+
+button {
+    border: none;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px 0px 10px 0px;
+    background-color: #c8df38;
+    font-size: 18px;
+    font-weight: bold;
+    color: black;
+    padding: 1%;   
+}
+
+button:hover {
+    box-shadow: #2c033b 5px 5px 10px;
+    cursor: pointer;
+}
