--- a/Trabalho Final/Informações/informaçoes.css
+++ b/Trabalho Final/Informações/informaçoes.css
@@ -18,8 +18,8 @@ body {
 
 .conteiner-informaçoes {
     background-color: #bfffdd;
-    width: 32em;
-    height: 32em;
+    width: 50%;
+    height: 70%;
     padding: 3%;
     border-radius: 15px;
     box-shadow: 10px 10px 20px #52d97b;
@@ -41,25 +41,10 @@ body {
 
 .texto {
     font-family: "Poppins",sans-serif;
-    padding: 5%;
+    padding: 3%;
     font-size: 18px;
     font-weight: 500;
-    margin: 5%;
-
-}
-
-button {
-    width: 100%;
-    height: 8%;
-    border: none;
-    border-radius: 15px;
-    background-color: #f757e4ab;
-    font-weight: bold;
-    font-size: 20px;
-    color: white;
-    font-family: "Inria Serif", serif;
-    font-style: italic;
-    cursor: pointer;
+    margin: 3%;
 }
 
 ul {
@@ -69,4 +54,36 @@ ul {
 a {
     text-decoration: none;
     color: white;
+}
+
+
+.voltar {
+    border: none;
+    border-radius: 15px;
+    background-color: #f757e4ab;
+    font-weight: bold;
+    font-size: 20px;
+    color: white;
+    font-family: "Inria Serif", serif;
+    font-style: italic;
+    cursor: pointer;
+    padding: 10px;
+    margin-right: 10%;
+    width: 32%;
+    box-shadow: 5px 5px 10px rgb(205, 205, 247);
+}
+
+.avancar {
+    border: none;
+    border-radius: 15px;
+    background-color: #f757e4ab;
+    font-weight: bold;
+    font-size: 20px;
+    color: white;
+    font-family: "Inria Serif", serif;
+    font-style: italic;
+    cursor: pointer;
+    padding: 10px;
+    margin-left: 16%;
+    box-shadow: 5px 5px 10px rgb(205, 205, 247);
 }
