--- a/Trabalho Final/Portifólio/style.css
+++ b/Trabalho Final/Portifólio/style.css
@@ -96,6 +96,7 @@ button {
     background-color: #c8df38;
     font-size: 18px;
     font-weight: bold;
+    font-style: italic;
     color: black;
     padding: 1%;   
 }
