--- a/Fontes/Ideias/style.css
+++ b/Fontes/Ideias/style.css
@@ -24,7 +24,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Gochi+Hand&family=Honk&family=Jersey+25+Charted&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nanum+Pen+Script&family=Rubik+Doodle+Shadow&family=VT323&display=swap'); /* Bumgee*/
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); /*Poppins*/
 
+@import url('https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap'); /*Inria*/
+
+@import url('https://fonts.googleapis.com/css2?family=Freckle+Face&display=swap'); /*Freckle*/
 
 *{
     padding: 0;
@@ -63,6 +67,12 @@ h1 {
     justify-content: space-between;
 }
 
+.div3 {
+    display: flex;
+    flex-direction: wrap;
+    justify-content: space-between;
+    
+}
 .madimi_one {
     font-family: "Madimi One", sans-serif;
 }
@@ -116,3 +126,14 @@ h1 {
     font-family: "Bungee Shade", sans-serif;
 }
 
+.poppins {
+    font-family: "Poppins", sans-serif;
+}
+
+.inria {
+    font-family: "Inria Serif", serif;
+}
+
+.freckle {
+    font-family: "Freckle Face", system-ui;
+}
