--- a/Aulas/Aulasss/style.css
+++ b/Aulas/Aulasss/style.css
@@ -1,3 +1,53 @@
-a {
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+img {
+    width: 30px;
+}
+
+body {
+    background-color: white;
+    width: 100vw;
+    height: 100vh;
+}
+nav {
+     display: flex;
+     justify-content: center;
+     flex-direction: column;
+     align-items: center;
+     margin: 10px;
+}
+
+.column {
+    float: left;
+    display: block;
+    width: 100%;
+    display: flex;
+    flex-direction: wrap;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    font-weight: bold;
+    animation: borderAnimation 2s forwards;
+    border: solid 2px black;
+}
+
+.column-middle {
+    padding: 14px 16px;
+    width: 50%; 
+    background-color: #64d5f8;
+}
+
+.column-side {
+    padding: 14px 16px;
+    background-color: #e9f864;
     width: 25%;
 }
+
+
+
+
